--- a/package.json
+++ b/package.json
@@ -20,16 +20,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^21.0.1",
+    "@angular/cdk": "^21.0.2",
     "@angular/common": "^21.0.2",
     "@angular/compiler": "^21.0.2",
     "@angular/core": "^21.0.2",
     "@angular/forms": "^21.0.2",
-    "@angular/material": "^21.0.1",
+    "@angular/material": "^21.0.2",
+    "@angular/material-luxon-adapter": "^21.0.2",
     "@angular/platform-browser": "^21.0.2",
     "@angular/router": "^21.0.2",
     "@eslint/js": "^9.39.1",
     "boxicons": "^2.1.4",
+    "jwt-decode": "^4.0.0",
+    "luxon": "^3.7.2",
+    "ngx-cookie-service": "^21.1.0",
+    "ngx-mask": "^20.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -42,6 +47,7 @@
     "@angular/cli": "^21.0.1",
     "@angular/compiler-cli": "^21.0.1",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "angular-eslint": "^21.0.1",
